@@ -29,6 +29,7 @@ This release contains contributions from (alphabetically by first name):
    with the live-system's NetPlan settings. (thanks Lukas)
  - *partition* module can now also define unencrypted partitions
    when encryption is used. (thanks Aaron)
+ - *plasmalnf* module ported to Plasma 6
 
 
 # 3.3.1 (2024-01-15)
